Revert "feat: add notification api"
This reverts commit 0eb9c605f2b4e1df06d6a91c511e29dc7b31c4c9.